[#288] Add ERD to API Doc & Remove duplicate artisan command on deploy
